# ai-chatbot

./: .env.example  .gitignore  CLAUDE.md  FEATURE_TEST.md  ISSUES.md  README.md  TROUBLESHOOTING_LOG.md  drizzle.config.ts  middleware.ts  package-lock.json  package.json  pnpm-lock.yaml  proxy.ts  tmpclaude-6fb6-cwd  tsconfig.tsbuildinfo
.claude/: dev_role_other.md  settings.json  settings.json.template  settings.local.json
.claude/COLES_SYSTEM/: BEST_PRACTICES_TODO.md  CHEATSHEET.md  PROJECT.md  PROJECT_WHAT_WHY_HOW_AUDIT.md  README.md  SOURCES.md
.claude/agents/: code-reviewer.md  copilot_kit.md  design-reviewer.md  dev-executor.md  orchestration-architect.md  pm-agent.md  pydantic_architect.md  steertrue-guide.md  test-executor.md
app/: globals.css  layout.tsx  page.tsx
components/: chat.tsx  multimodal-input.tsx  session-provider.tsx
data/: strategicPartnerBlock.ts
db/: index.ts
docs/: FEATURE_TEST_chat-panel-1.0.1.md
lib/: auth.config.ts  auth.ts  github.ts  panelStorage.ts  persistence.ts  settingsStorage.ts  steertrue-adapter.ts  steertrue-agent.ts  steertrue.ts  useUnsavedChangesWarning.ts
memory/: GLOBAL_DAILY_LOG.md
public/: test-dashboard.html  test-google.html  test-login.html
python-service/: .env.example  .gitignore  Dockerfile  agent.py  main.py  models.py  pyproject.toml  railway.toml  requirements.txt  steertrue.py  test_local.py
python-service/agent/: __init__.py  main.py
scripts/: blocked-detector.ps1  format-file.ps1  pretooluse-todowrite.ps1  session-start.ps1  steertrue-hook.ps1  steertrue-subagent-hook.ps1
(+249 files in other folders)
