[project]
name = "steertrue-chat-agent"
version = "0.1.0"
description = "SteerTrue-governed chat agent using Pydantic AI and CopilotKit"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic-ai>=0.0.46",
    "copilotkit>=0.1.41",
    "httpx>=0.27.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
